[package]
name = "envgg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = "0.4.2"
gpui-component-assets = "0.4.2"
indexmap = "2.12.1"
keyring = { git = "https://github.com/open-source-cooperative/keyring-rs", rev = "v4.0.0-alpha.3" }
keyring-core = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
